--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ buildscript {
         classpath "org.jetbrains.kotlinx:atomicfu-gradle-plugin:$atomicfu_version"
     }
 }
+
+plugins {
+    id "com.wynprice.cursemaven" version "2.1.5"
+}
+
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
@@ -20,7 +25,6 @@ apply plugin: 'idea'
 apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
 apply plugin: 'kotlinx-atomicfu'
-
 
 version = '1.0'
 group = 'dev.weiland.mods.chunkloader-peripheral' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -99,9 +103,6 @@ repositories {
     maven {
         url 'https://squiddev.cc/maven/'
     }
-    flatDir {
-        dirs "mylibs"
-    }
 }
 
 dependencies {
@@ -112,7 +113,8 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib'
     implementation "org.jetbrains.kotlinx:atomicfu:$atomicfu_version"
     implementation fg.deobf("org.squiddev:cc-tweaked-1.15.2:1.87.1")
-    implementation fg.deobf("mylibs:crashutilities-2.5:2.5")
+//    implementation fg.deobf("mylibs:crashutilities-2.5:2.5")
+    implementation fg.deobf("curse.maven:crash-utilities:2984378")
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
