--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,6 @@ plugins {
 
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
@@ -31,6 +30,57 @@ group = 'dev.weiland.mods.chunkloader-peripheral' // http://maven.apache.org/gui
 archivesBaseName = 'chunkloader-peripheral'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
+
+sourceSets {
+    main {
+        resources {
+            srcDirs 'src/generated/resources'
+        }
+    }
+}
+
+repositories {
+    mavenCentral()
+    maven {
+        url 'https://squiddev.cc/maven/'
+    }
+}
+
+configurations {
+    computercraft
+    implementation.extendsFrom(computercraft)
+}
+
+dependencies {
+    // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
+    // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
+    // The userdev artifact is a special name and will get all sorts of transformations applied to it.
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.21'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+    implementation "org.jetbrains.kotlinx:atomicfu:$atomicfu_version"
+    computercraft fg.deobf("org.squiddev:cc-tweaked-1.15.2:1.87.1")
+//    implementation fg.deobf("mylibs:crashutilities-2.5:2.5")
+    implementation fg.deobf("curse.maven:crash-utilities:2984378")
+
+    // You may put jars on which you depend on in ./libs or you may define them like so..
+    // compile "some.group:artifact:version:classifier"
+    // compile "some.group:artifact:version"
+
+    // Real examples
+    // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
+    // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
+
+    // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
+    // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+
+    // These dependencies get remapped to your current MCP mappings
+    // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+
+    // For more info...
+    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
+    // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+}
 
 minecraft {
     // The mappings can be changed at any time, and must be in the following format.
@@ -50,7 +100,7 @@ minecraft {
             workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+            property 'forge.logging.markers', ''
 
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
@@ -87,7 +137,11 @@ minecraft {
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
 
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/')
+            args '--mod', 'chunkloader_upgrade',
+                 '--existing', configurations.computercraft.asPath,
+                 '--existing', sourceSets.main.output.resourcesDir,
+                 '--all',
+                 '--output', file('src/generated/resources/')
 
             mods {
                 examplemod {
@@ -96,44 +150,6 @@ minecraft {
             }
         }
     }
-}
-
-repositories {
-    mavenCentral()
-    maven {
-        url 'https://squiddev.cc/maven/'
-    }
-}
-
-dependencies {
-    // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
-    // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
-    // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.15.2-31.2.21'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
-    implementation "org.jetbrains.kotlinx:atomicfu:$atomicfu_version"
-    implementation fg.deobf("org.squiddev:cc-tweaked-1.15.2:1.87.1")
-//    implementation fg.deobf("mylibs:crashutilities-2.5:2.5")
-    implementation fg.deobf("curse.maven:crash-utilities:2984378")
-
-    // You may put jars on which you depend on in ./libs or you may define them like so..
-    // compile "some.group:artifact:version:classifier"
-    // compile "some.group:artifact:version"
-
-    // Real examples
-    // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // These dependencies get remapped to your current MCP mappings
-    // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // For more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
