--- a/build.gradle
+++ b/build.gradle
@@ -168,6 +168,13 @@ jar {
     }
 }
 
+tasks.whenTaskAdded { task ->
+    if (task.name == "runData") {
+        def actions = task.getTaskActions() as List<?>
+        actions.removeAt(actions.size() - 1)
+    }
+}
+
 // Example configuration to allow publishing using the maven-publish task
 // This is the preferred method to reobfuscate your jar file
 jar.finalizedBy('reobfJar') 
