remove crashutils from deps, try and fix CI

--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,7 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib'
     implementation "org.jetbrains.kotlinx:atomicfu:$atomicfu_version"
     computercraft fg.deobf("org.squiddev:cc-tweaked-1.15.2:1.87.1")
-//    implementation fg.deobf("mylibs:crashutilities-2.5:2.5")
-    implementation fg.deobf("curse.maven:crash-utilities:2984378")
+//    implementation fg.deobf("curse.maven:crash-utilities:2984378")
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
