--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     ext.atomicfu_version = '0.14.3'
 
     repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         maven { url = 'https://files.minecraftforge.net/maven' }
         jcenter()
         mavenCentral()
@@ -11,11 +14,13 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlinx:atomicfu-gradle-plugin:$atomicfu_version"
+        classpath "com.github.breadmoirai:github-release:2.2.12"
     }
 }
 
 plugins {
     id "com.wynprice.cursemaven" version "2.1.5"
+//    id "com.github.breadmoirai.github-release" version "2.2.12"
 }
 
 apply plugin: 'net.minecraftforge.gradle'
@@ -24,12 +29,23 @@ apply plugin: 'idea'
 apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
 apply plugin: 'kotlinx-atomicfu'
+apply plugin: "com.github.breadmoirai.github-release"
 
 version = '1.0'
 group = 'dev.weiland.mods.chunkloader-peripheral' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'chunkloader-peripheral'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
+
+githubRelease {
+    token project.property("github_token")
+    owner "diesieben07"
+    repo "chunkloader-peripheral"
+    releaseAssets jar.destinationDirectory.asFileTree.asList()
+    body changelog()
+}
+
+tasks.githubRelease.dependsOn(tasks.build)
 
 sourceSets {
     main {
@@ -182,7 +198,8 @@ tasks.whenTaskAdded { task ->
 
 // Example configuration to allow publishing using the maven-publish task
 // This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar') 
+jar.finalizedBy('reobfJar')
+
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
 
