--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: "Run data generators"
       uses: OrangeLabs-moe/gradle-actions@v5.0-openjdk-8
+      env:
+        ORG_GRADLE_PROJECT_github_token: ${{ secrets.GITHUB_TOKEN }}
       with:
         args: runData
     - name: "Build jar file and publish"
