--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,23 +21,16 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - uses: actions/cache@v2
-      env:
-        cache-name: cache-gradle
+    - uses: actions/setup-java@v1
       with:
-        path: ~/.gradle
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/build.gradle') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
+        java-version: 8
     - name: "Run data generators"
-      uses: OrangeLabs-moe/gradle-actions@v5.0-openjdk-8
+      uses: eskatos/gradle-command-action@v1
       with:
-        args: runData
+        arguments: runData
     - name: "Build jar file and publish"
-      uses: OrangeLabs-moe/gradle-actions@v5.0-openjdk-8
+      uses: eskatos/gradle-command-action@v1
       env:
         ORG_GRADLE_PROJECT_github_token: ${{ secrets.GITHUB_TOKEN }}
       with:
-        args: githubRelease
+        arguments: githubRelease
