--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -20,6 +20,8 @@ authors="diesieben07" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 Just a simple Chunk loader upgrade for CC: Tweaked turtles.
+
+Thanks to @pupnewfster for his help with the new chunk loading API.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.chunkloader_upgrade]] #optional
